--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
   "repository": "oss6/path-util",
   "devDependencies": {
     "gulp": "^3.6.0",
+    "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.9.0",
+    "gulp-jsdoc3": "^0.1.0",
     "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0"
+    "gulp-plumber": "^1.0.0",
+    "ink-docstrap": "^1.1.0",
+    "jsdoc": "^3.4.0"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
