--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "path-util",
   "version": "0.1.0",
   "description": "Utility for pathname manipulations",
-  "homepage": "",
+  "homepage": "https://oss6.github.io/path-util",
   "author": {
     "name": "oss6",
     "email": "ossedb@gmail.com",
